# ghost-protocol

./: .gitignore  README.md
3d-movement-interp/: 3dmoveinterp.cs  movementsim.cs
GhostProtocolView/: README.md
GhostProtocolView/Assets/Scenes/: TestRoom.unity
GhostProtocolView/Assets/Scripts/: CameraController.cs
GhostProtocolView/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
GhostProtocolView/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
KitchenView/: README.md
KitchenView/Assets/: Jungle.unity
KitchenView/Assets/Editor/: GlobalPositionInspectorEditor.cs
KitchenView/Assets/Materials/: MyClipMaterial.mat  red_filling.mat
KitchenView/Assets/Prefabs/: Kitchen_View_Scene.prefab  Unpacked.prefab  camera_setup_scene_without_kitchen.prefab  fish_objects.prefab
KitchenView/Assets/Resources/: UnityGLTFSettings.asset
KitchenView/Assets/Scenes/: DebugKitchen.unity  GetStarted_Scene.unity  Kitchen_View_Scene.prefab  underwater.unity
KitchenView/Assets/Scripts/: CameraController.cs  CameraPositionOverlay.cs  CameraTransformUI.cs  ClipByCube.cs  DinoBehaviourScript.cs  GlobalPositionInspector.cs  KeyboardCamera.cs  PortalCamera.cs  shark_behaviour.cs
KitchenView/Assets/Shaders/: ClipInsideCube.shader
KitchenView/Assets/UI/: CameraTransformPanel.uxml  CameraTransformPanelSettings.asset
KitchenView/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
camera/: README.md
camera/StreamViewer/: CMakeLists.txt  client.cpp  client.h  main.cpp  main.qml  project.cpp  project.h  videostill.cpp  videostill.h  wsclient.cpp  wsclient.h
camera/hackweek26/: CMakeLists.txt  Makefile  hackweek26.desktop
camera/hackweek26/qml/: hackweek26.qml
camera/hackweek26/qml/pages/: FeedPage.qml
camera/hackweek26/rpm/: hackweek26.changes.in  hackweek26.changes.run.in
camera/hackweek26/src/: hackweek26.cpp  videofilter.cpp  videofilter.h  videofilterrunnable.cpp  videofilterrunnable.h
camera/network-test/: network-test.py
camera/stream-filter/: Makefile  stream-filter.desktop  stream-filter.pro
camera/stream-filter/dbus/: uk.ac.turing.stream.service  uk.ac.turing.stream.xml
camera/stream-filter/rpm/: stream-filter.changes.in  stream-filter.changes.run.in
camera/stream-filter/src/: facetracker.cpp  facetracker.h  (+5 more)
face_detection/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  stream_face_results_to_ws.py
spatial-locator/: README.md  calibrate.rkt  camera-config.rkt  camera-theory.tex  config.rkt  locator.rkt  main.rkt  mock-cameras.rkt  reference-datum.rkt  reference-dimensions.md  spatial.rkt
webpage/: index.html  index.html~
websocket-server/: README.md  pyproject.toml  ws_broadcast.py  ws_client.py
(+35 files in other folders)
